media player spacing fixed to fit in the div

--- a/react-app/src/components/MusicPlayer/MusicPlayer.css
+++ b/react-app/src/components/MusicPlayer/MusicPlayer.css
@@ -81,7 +81,7 @@
 } */
 
 .progress-bar {
-    margin: 20px 0;
+    margin: 20px 0px 5px 0px;
     width: 400px;
     height: 30px;
     /* border: 2px solid purple; */
